fix overflow issue

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -71,6 +71,7 @@
   background: variables.$secondary;
   position: relative;
   z-index: -2;
+  overflow: hidden;
 
   &:after {
     content: "";
